--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="">
-
-    <title>My Website</title>
+    <link rel="icon" href="./img/person.png">
+    
+    <title>Hardik Kapadia</title>
 </head>
 
 <body>
