--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/person.png">
-    
+
     <title>Hardik Kapadia</title>
 </head>
 
@@ -297,13 +297,15 @@
             <h2>For backend and for fun</h2>
             <div class="social-icons">
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/nolan/64/github.png" /></a>
+                    <a href="https://github.com/thecoderenroute"><img
+                            src="https://img.icons8.com/nolan/64/github.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/nolan/64/linkedin.png" /></a>
+                    <a href="https://stackoverflow.com/users/7330002/thecoderenroute"><img
+                            src="https://img.icons8.com/nolan/64/linkedin.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img
+                    <a href="https://www.linkedin.com/in/hardik-kapadia/"><img
                             src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABmJLR0QA/wD/AP+gvaeTAAAEp0lEQVRo
                             ge2Ya2xUZRCGnzm7y4KBAhUUu72oFMRuiU0KMSA/2tIoYgiJhkIsoOGaaBCMEGi5pEYuGrnZRiJWxUApdIWY+ENjIoRASIyhStBtKNSg9KIGjKgobrt7xh/by
                             7EscNgLlLhvNtkz38w3M+/5ZuacXUgiiSSSuJ2Q250AQHblWfcQN9WYOgaREScWZ2chonb29gkCAOPeOfsrkAqg0pFWvzjnJzv7jIRm1Qtjy3wTcst9KyLpBM
