--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <ul>
                         <li><a href="#hero" data-after="Home">Home</a></li>
-                        <li><a href="#services" data-after="Services">Services</a></li>
+                        <li><a href="#services" data-after="Skills">Skills</a></li>
                         <li><a href="#projects" data-after="Projects">Projects</a></li>
                         <li><a href="#about" data-after="About">About</a></li>
                         <li><a href="#contact" data-after="Contact">Contact</a></li>
