--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="keywords" content="Hardik,Kapadia,thecoderenroute,portfolio,resume" />
     <meta name="description" content="Hardik Kapadia's Portfolio Website" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./img/person.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./img/person.png" />
 
     <title>Hardik Kapadia</title>
 </head>
 
 <body>
-
-
     <!-- Header -->
     <section id="header">
         <div class="header container">
@@ -50,7 +48,9 @@
             <div>
                 <h1>Hello,<span></span></h1>
                 <h1>My Name is <span></span></h1>
-                <h1 id="replace" og="Hardik" next="thecoderenroute">Hardik<span></span></h1>
+                <h1 id="replace" og="Hardik" next="thecoderenroute">
+                    Hardik<span></span>
+                </h1>
                 <a href="#projects" class="cta"> Portfolio </a>
             </div>
         </div>
@@ -62,7 +62,7 @@
     <section id="services">
         <div class="services container">
             <div class="service-top">
-                <h1 class="section-title"> Sk<span>i</span>lls </h1>
+                <h1 class="section-title">Sk<span>i</span>lls</h1>
                 <!-- <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate quis massa a efficitur. In
                     hac habitasse platea dictumst. Nulla ac gravida nisl. Mauris consectetur enim sed massa egestas
@@ -72,6 +72,50 @@
                 </p> -->
             </div>
             <div class="service-bottom">
+
+                <div class="skill-item">
+                    <img src="./img/logo/java-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/python-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/c-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/cpp-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/spring-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/maven-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/tomcat-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/android-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/html-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/css-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/js-logo.svg" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/flutter-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/github-logo.png" alt="">
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/docker-logo.png" alt="">
+                </div>
+                <!--
                 <div class="service-item">
                     <div class="service-item-title">
                         <div class="icon">
@@ -134,6 +178,7 @@
                     </ul>
                     </p>
                 </div>
+                -->
             </div>
         </div>
     </section>
@@ -144,7 +189,7 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-headers">
-                <h1 class="section-title"> Recent <span>Pro</span>jects </h1>
+                <h1 class="section-title">Recent <span>Pro</span>jects</h1>
             </div>
             <div class="all-projects">
                 <div class="project-item">
@@ -152,16 +197,18 @@
                         <a href="https://github.com/thecoderenroute/stonks">
                             <h1>Stonks</h1>
                         </a>
-                        <h2> Stock Market Prediction using Social Media Sentiment</h2>
+                        <h2>Stock Market Prediction using Social Media Sentiment</h2>
                         <p>
-                            This Web-app was developed as a part of a Hackathon with a team of four people. We used
-                            Python, Django, Twitter APIs, and Natural Language Processing along with a few minor Python
-                            modules to create a web-app which would identify tweets regarding a certain stock and based
-                            on the tweets predict the future price of the stock.
+                            This Web-app was developed as a part of a Hackathon with a team
+                            of four people. We used Python, Django, Twitter APIs, and
+                            Natural Language Processing along with a few minor Python
+                            modules to create a web-app which would identify tweets
+                            regarding a certain stock and based on the tweets predict the
+                            future price of the stock.
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img">
+                        <img src="./img/project-1.png" alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
@@ -171,14 +218,15 @@
                         </a>
                         <h2>The 1979 classic Hit re-created using JavaFX</h2>
                         <p>
-                            As a part of the final step to complete the extremely popular Java MOOC offered by
-                            University of Helsinki, I developed this JavaFx Application than enables anybody to play the
-                            classic game on any JVM running device
+                            As a part of the final step to complete the extremely popular
+                            Java MOOC offered by University of Helsinki, I developed this
+                            JavaFx Application than enables anybody to play the classic game
+                            on any JVM running device
                         </p>
                     </div>
                     <div class="project-image">
                         <img src="https://raw.githubusercontent.com/thecoderenroute/Atari-Asteroids/master/res/asteroids.jpg"
-                            alt="img">
+                            alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
@@ -186,16 +234,17 @@
                         <a href="https://github.com/thecoderenroute/BookSMart.git">
                             <h1>Book 'S' Mart</h1>
                         </a>
-                        <h2> An Android App to exchange books</h2>
+                        <h2>An Android App to exchange books</h2>
                         <p>
-                            Book S Mart is a place where people can exchange used and newbooks of all
-                            types. Every year millions of books are sent to recycling as plainpaper although they
-                            can be used again. Our goal is to provide these books to those in need as well as Help
+                            Book S Mart is a place where people can exchange used and
+                            newbooks of all types. Every year millions of books are sent to
+                            recycling as plainpaper although they can be used again. Our
+                            goal is to provide these books to those in need as well as Help
                             the environment by reducing paper usage
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-3.jpg" alt="img">
+                        <img src="./img/project-3.jpg" alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
@@ -203,29 +252,30 @@
                         <a href="https://github.com/thecoderenroute/dicord-bot.git">
                             <h1>Discord bot</h1>
                         </a>
-                        <h2> A General Purpose discord bot</h2>
+                        <h2>A General Purpose discord bot</h2>
                         <p>
-                            A General Purpose discord bot written in Python with functionalities of Web scraping images,
-                            polls, and
-                            extensive use of discord functionalities.
+                            A General Purpose discord bot written in Python with
+                            functionalities of Web scraping images, polls, and extensive use
+                            of discord functionalities.
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-4.png" alt="img">
+                        <img src="./img/project-4.png" alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Reddit API</h1>
-                        <h2> A Redit and GfyCat API</h2>
+                        <h2>A Redit and GfyCat API</h2>
                         <p>
-                            An implementation of the Reddit PRAW API combined with the GfyCat API to make it easier to
-                            download multiple images and gifs from a subreddit of the user's choice. The front-end was
+                            An implementation of the Reddit PRAW API combined with the
+                            GfyCat API to make it easier to download multiple images and
+                            gifs from a subreddit of the user's choice. The front-end was
                             done using KTinker
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-5.png" alt="img">
+                        <img src="./img/project-5.png" alt="img" />
                     </div>
                 </div>
             </div>
@@ -239,16 +289,20 @@
             <div class="col-left">
                 <div class="about-img">
                     <img src="https://avatars.githubusercontent.com/u/32408025?s=400&u=f341a3e147106d1fd56f6a32570e723f7854d0ba&v=4"
-                        alt="Me">
+                        alt="Me" />
                 </div>
             </div>
             <div class="col-right">
                 <h1 class="section-title">About <span>me</span></h1>
                 <h2>Software Developer</h2>
-                <p>I am an inquisitive person who likes creating - from literature to software to photos. I enjoy
-                    softwaredevelopment as it offers me a space to explore my imagination and create magic in today's
-                    modern world.Intoday's ever changing technology-dependent world wherenothing is more than a click
-                    away, it is a privilege to be an engineer. I am also an avid reader and a casual photographer</p>
+                <p>
+                    I am an inquisitive person who likes creating - from literature to
+                    software to photos. I enjoy softwaredevelopment as it offers me a
+                    space to explore my imagination and create magic in today's modern
+                    world.Intoday's ever changing technology-dependent world
+                    wherenothing is more than a click away, it is a privilege to be an
+                    engineer. I am also an avid reader and a casual photographer
+                </p>
                 <a href="./doc/Resume.pdf" class="cta" target="_blank">Download Resume</a>
             </div>
         </div>
@@ -263,21 +317,27 @@
             </div>
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/nolan/64/apple-mail.png" alt="mail" /></div>
+                    <div class="icon">
+                        <img src="https://img.icons8.com/nolan/64/apple-mail.png" alt="mail" />
+                    </div>
                     <div class="contact-info">
                         <h1>Email</h1>
-                        <h2> hardik.kapadia63@gmail.com</h2>
+                        <h2>hardik.kapadia63@gmail.com</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/nolan/64/phone.png" alt="call" /></div>
+                    <div class="icon">
+                        <img src="https://img.icons8.com/nolan/64/phone.png" alt="call" />
+                    </div>
                     <div class="contact-info">
                         <h1>Phone</h1>
                         <h2>+91 887 956 3067</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/nolan/64/address.png" alt="address" /></div>
+                    <div class="icon">
+                        <img src="https://img.icons8.com/nolan/64/address.png" alt="address" />
+                    </div>
                     <div class="contact-info">
                         <h1>Address</h1>
                         <h2>Kandivali (w), Mumbai</h2>
@@ -321,7 +381,7 @@
                             g5xsOzX49lvgQxybemr51wBUZOF1VSoEnAFcEs0vAAQOtKWtZeFSw97PxekjIFNqUuWOoabpmmMJcUSZGiPPj6pYFD/RZAlasv++9LHGYsxSZB4wGUOW1ta0L18X
                             Dvy0Cbz5W132nVhyf2b1n6fgqH+hFTNoUo9lhmK0acrS2B2je4X/xcm8/Gz3vT1AxS03TqFrbNr/xer7twnmzG7qw5NHKFELMAOn8KKYKGCauAbB0XNUfKC0itKhK
                             G5jnf5G/2kT5bHv9S403jpBgAkD6DfQpCDkKOeFSD99cFS4A98QQ9z+ImoAjEGoz+7melpCZISIehTQgk/B3OuHX6khojTZmJERNYPvJly8BH19L/0r+zmFBDaWJB
-                            DNMw/CIaXoQyRChJdqYkRBLCV0XW+oXXwQuAqcSFQNiJGCdIDeDaKbNtXBL/5VIBO54AjGVUDxLIVr8/04g2sZNFO74E7jjCSSRRBJJ3F78C+C9gL3NAffXAAAAAElFTkSuQmCC"></a>
+                            DNMw/CIaXoQyRChJdqYkRBLCV0XW+oXXwQuAqcSFQNiJGCdIDeDaKbNtXBL/5VIBO54AjGVUDxLIVr8/04g2sZNFO74E7jjCSSRRBJJ3F78C+C9gL3NAffXAAAAAElFTkSuQmCC" /></a>
                 </div>
             </div>
             <p>Copyright © 2021 Hardik Kapadia. All Rights Reserved</p>
