Added names and djang

--- a/index.html
+++ b/index.html
@@ -75,46 +75,65 @@
 
                 <div class="skill-item">
                     <img src="./img/logo/java-logo.png" alt="">
+                    <h3> Java </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/python-logo.png" alt="">
+                    <h3> Python </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/c-logo.png" alt="">
+                    <h3> C </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/cpp-logo.png" alt="">
+                    <h3> C++ </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/spring-logo.png" alt="">
+                    <h3> Spring </h3>
+                </div>
+                <div class="skill-item">
+                    <img src="./img/logo/dj-logo.png" alt="">
+                    <h3> Django </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/maven-logo.png" alt="">
+                    <h3> Maven </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/tomcat-logo.png" alt="">
+                    <h3> Tomcat </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/android-logo.png" alt="">
+                    <h3> Android App Dev </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/html-logo.png" alt="">
+                    <h3> HTML </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/css-logo.png" alt="">
+                    <h3> CSS </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/js-logo.svg" alt="">
+                    <h3> JavaScript </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/flutter-logo.png" alt="">
+                    <h3> Flutter </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/github-logo.png" alt="">
+                    <h3> Git </h3>
                 </div>
                 <div class="skill-item">
                     <img src="./img/logo/docker-logo.png" alt="">
+                    <h3> Docker </h3>
                 </div>
+                
                 <!--
                 <div class="service-item">
                     <div class="service-item-title">
