Added some skills

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                     <img src="./img/logo/docker-logo.png" alt="">
                     <h3> Docker </h3>
                 </div>
+                <div class="skill-item">
+                    <img src="./img/logo/mysql.png" alt="">
+                    <h3> MySQL </h3>
+                </div>
                 
                 <!--
                 <div class="service-item">
