Minor code change and changed portfolio to Resume

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h1 id="replace" og="Hardik" next="thecoderenroute">
                     Hardik<span></span>
                 </h1>
-                <a href="#projects" class="cta"> Portfolio </a>
+                <a href="#about" class="cta"> Resume </a>
             </div>
         </div>
     </section>
@@ -137,71 +137,6 @@
                     <img src="./img/logo/mysql.png" alt="">
                     <h3> MySQL </h3>
                 </div>
-                
-                <!--
-                <div class="service-item">
-                    <div class="service-item-title">
-                        <div class="icon">
-                            <img src="https://img.icons8.com/nolan/64/java-coffee-cup-logo.png" />
-                        </div>
-                        <h2>Java</h2>
-                    </div>
-                    <p>
-                    <ul>
-                        <li>Core</li>
-                        <li>Spring</li>
-                        <li>JavaFX</li>
-                        <li>Android</li>
-                    </ul>
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="service-item-title">
-                        <div class="icon">
-                            <img src="https://img.icons8.com/nolan/64/python.png" />
-                        </div>
-                        <h2>Python</h2>
-                    </div>
-                    <p>
-                    <ul>
-                        <li>Core</li>
-                        <li>Django</li>
-                        <li>Selenium</li>
-                        <li>Web Scraping</li>
-                    </ul>
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="service-item-title">
-                        <div class="icon">
-                            <img src="https://img.icons8.com/nolan/64/html-5.png" />
-                        </div>
-                        <h2>Front-end</h2>
-                    </div>
-                    <p>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="service-item-title">
-                        <div class="icon">
-                            <img src="https://img.icons8.com/nolan/64/camera.png" />
-                        </div>
-                        <h2>Non-tech</h2>
-                    </div>
-                    <p>
-                    <ul>
-                        <li>Content-writing</li>
-                        <li>Photography</li>
-                        <li>Graphic Designing</li>
-                    </ul>
-                    </p>
-                </div>
-                -->
             </div>
         </div>
     </section>
@@ -320,10 +255,10 @@
                 <h2>Software Developer</h2>
                 <p>
                     I am an inquisitive person who likes creating - from literature to
-                    software to photos. I enjoy softwaredevelopment as it offers me a
+                    software to photos. I enjoy software development as it offers me a
                     space to explore my imagination and create magic in today's modern
-                    world.Intoday's ever changing technology-dependent world
-                    wherenothing is more than a click away, it is a privilege to be an
+                    world. In today's ever changing technology-dependent world
+                    where nothing is more than a click away, it is a privilege to be an
                     engineer. I am also an avid reader and a casual photographer
                 </p>
                 <a href="./doc/Resume.pdf" class="cta" target="_blank">Download Resume</a>
