--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="brand">
                 <h1><span>H</span>ardik <span>K</span>apadia</h1>
             </div>
-            <h2>For backend and for fun</h2>
+            <h2>To bringin magic to life</h2>
             <div class="social-icons">
                 <div class="social-item">
                     <a href="https://github.com/thecoderenroute"><img
