updated projects and resume

--- a/index.html
+++ b/index.html
@@ -171,20 +171,36 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/Atari-Asteroids.git">
-                            <h1>Asteroids by Atari Clone</h1>
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>ReImagine</h1>
                         </a>
-                        <h2>The 1979 classic Hit re-created using JavaFX</h2>
+                        <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
+                            reddit</h2>
                         <p>
-                            As a part of the final step to complete the extremely popular
-                            Java MOOC offered by University of Helsinki, I developed this
-                            JavaFx Application than enables anybody to play the classic game
-                            on any JVM running device
+                            A Cross-platform app built on flutter to browse through and save various posts from the
+                            groupd of subreddits called Imaginary Network Expanded (INE) on reddit. Built on dart using
+                            flutter for the front-end, and sqlite as the primary Database.
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/thecoderenroute/Atari-Asteroids/master/res/asteroids.jpg"
-                            alt="img" />
+                        <img src="./img/project-2.png" alt="img" />
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Stock Market Portfolio Management App Backend</h1>
+                        </a>
+                        <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
+                        <p>
+                            A REST API which can be consumed by any front-end for a stock market portfolio management
+                            application. Developed in java using Spring boot, this is a complete package with an easy
+                            connection to any SQL Database, proper security and authentication with Spring Security and
+                            real-time stock market prices with Alphavantage API.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/smpm.jpg" alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
@@ -219,21 +235,6 @@
                     </div>
                     <div class="project-image">
                         <img src="./img/project-4.png" alt="img" />
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-info">
-                        <h1>Reddit API</h1>
-                        <h2>A Redit and GfyCat API</h2>
-                        <p>
-                            An implementation of the Reddit PRAW API combined with the
-                            GfyCat API to make it easier to download multiple images and
-                            gifs from a subreddit of the user's choice. The front-end was
-                            done using KTinker
-                        </p>
-                    </div>
-                    <div class="project-image">
-                        <img src="./img/project-5.png" alt="img" />
                     </div>
                 </div>
             </div>
