--- a/index.html
+++ b/index.html
@@ -63,13 +63,6 @@
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Sk<span>i</span>lls</h1>
-                <!-- <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vulputate quis massa a efficitur. In
-                    hac habitasse platea dictumst. Nulla ac gravida nisl. Mauris consectetur enim sed massa egestas
-                    finibus. Vestibulum eget elementum mauris. Nunc lacinia
-                    erat eu vulputate hendrerit. Nam at volutpat mauris. Donec non tristique lorem. Donec cursus, leo a
-                    dictum fermentum, neque nibh feugiat mi, sit amet fermentum velit orci at eros.
-                </p> -->
             </div>
             <div class="service-bottom">
 
@@ -146,10 +139,250 @@
 
     <section id="projects">
         <div class="projects container">
+
             <div class="projects-headers">
                 <h1 class="section-title">Recent <span>Pro</span>jects</h1>
             </div>
-            <div class="all-projects">
+
+            <div class="project-buttons">
+                <button class="cta project-button" type="button" id="swe-pro-view"> SWE </button>
+                <button class="cta project-button" type="button" id="ml-pro-view"> ML </button>
+                <button class="cta project-button" type="button" id="mob-pro-view"> Mobile </button>
+                <button class="cta project-button" type="button" id="all-pro-view"> All </button>
+            </div>
+
+            <div class="swe-projects all-projects">
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Stock Market Portfolio Management App Backend</h1>
+                        </a>
+                        <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
+                        <p>
+                            A REST API which can be consumed by any front-end for a stock market portfolio management
+                            application. Developed in java using Spring boot, this is a complete package with an easy
+                            connection to any SQL Database, proper security and authentication with Spring Security and
+                            real-time stock market prices with Alphavantage API.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/smpm.jpg" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                            <h1>Uni-link</h1>
+                        </a>
+                        <h2>Unified solution for social media managers and small businesses</h2>
+                        <p>
+                            A multi-platform social media management application that enables users to manage their
+                            social media profiles accross multiple social platforms from a single unified app. Allowed
+                            users to post, view statistics, and curate their content curation strategy using trained
+                            Convolutional and Recurrent neural networks embedded within the app.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/BookSMart.git">
+                            <h1>Book 'S' Mart</h1>
+                        </a>
+                        <h2>An Android App to exchange books</h2>
+                        <p>
+                            Book S Mart is a place where people can exchange used and
+                            newbooks of all types. Every year millions of books are sent to
+                            recycling as plainpaper although they can be used again. Our
+                            goal is to provide these books to those in need as well as Help
+                            the environment by reducing paper usage
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-3.jpg" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Stonks</h1>
+                        </a>
+                        <h2>Stock Market Prediction using Social Media Sentiment</h2>
+                        <p>
+                            This Web-app was developed as a part of a Hackathon with a team of four people. We used
+                            Python, Django, Twitter APIs, and Natural Language Processing to create a web-app which
+                            would identify tweets regarding a certain stock and based on the tweets predict the future
+                            price of the stock.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/dicord-bot.git">
+                            <h1>Discord bot</h1>
+                        </a>
+                        <h2>A General Purpose discord bot</h2>
+                        <p>
+                            A General Purpose discord bot written in Python with
+                            functionalities of scraping images off the web, polls, and various miscellanious
+                            of discord-specific functionalities.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-4.png" alt="img" />
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="ml-projects all-projects">
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                            <h1>Uni-link</h1>
+                        </a>
+                        <h2>Unified solution for social media managers and small businesses</h2>
+                        <p>
+                            A multi-platform social media management application that enables users to manage their
+                            social media profiles accross multiple social platforms from a single unified app. Allowed
+                            users to post, view statistics, and curate their content curation strategy using trained
+                            Convolutional and Recurrent neural networks embedded within the app.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Stonks</h1>
+                        </a>
+                        <h2>Stock Market Prediction using Social Media Sentiment</h2>
+                        <p>
+                            This Web-app was developed as a part of a Hackathon with a team of four people. We used
+                            Python, Django, Twitter APIs, and Natural Language Processing to create a web-app which
+                            would identify tweets regarding a certain stock and based on the tweets predict the future
+                            price of the stock.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Social Students Stats</h1>
+                        </a>
+                        <h2>Computing Sociability scores and homophily for social media users</h2>
+                        <p>
+                            Formulated and implemented a statistical model under a professor to mine and analyze the
+                            social media profiles and posts of over 5000 users. The model computes personalized
+                            sociability scores and quantifies the homophily between users. The model also utilized a
+                            Recurrent Neural Network trained on 20,000 tweets which identified troll tweets with 95%
+                            accuracy.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Insta-diagnosis</h1>
+                        </a>
+                        <h2>Predicting the probability of a user having a disease based off scans</h2>
+                        <p>
+                            Led a team in developing a secure web app using Django to predict whether or not a user has
+                            a
+                            certain disease based on MRI scans of respective uploaded by users. Pre-processed the images
+                            using OpenCV before passing them to the CNNs.
+
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="mobile-projects all-projects">
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                            <h1>Uni-link</h1>
+                        </a>
+                        <h2>Unified solution for social media managers and small businesses</h2>
+                        <p>
+                            A multi-platform social media management application that enables users to manage their
+                            social media profiles accross multiple social platforms from a single unified app. Allowed
+                            users to post, view statistics, and curate their content curation strategy using trained
+                            Convolutional and Recurrent neural networks embedded within the app.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/BookSMart.git">
+                            <h1>Book 'S' Mart</h1>
+                        </a>
+                        <h2>An Android App to exchange books</h2>
+                        <p>
+                            Book S Mart is a place where people can exchange used and
+                            newbooks of all types. Every year millions of books are sent to
+                            recycling as plainpaper although they can be used again. Our
+                            goal is to provide these books to those in need as well as Help
+                            the environment by reducing paper usage
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-3.jpg" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>ReImagine</h1>
+                        </a>
+                        <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
+                            reddit</h2>
+                        <p>
+                            A Cross-platform app built on flutter to browse through and save various posts from the
+                            groupd of subreddits called Imaginary Network Expanded (INE) on reddit. Built on dart using
+                            flutter for the front-end, and sqlite as the primary Database.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-2.png" alt="img" />
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="all-pros all-projects">
                 <div class="project-item">
                     <div class="project-info">
                         <a href="https://github.com/thecoderenroute/stonks">
@@ -203,6 +436,25 @@
                         <img src="./img/smpm.jpg" alt="img" />
                     </div>
                 </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                            <h1>Uni-link</h1>
+                        </a>
+                        <h2>Unified solution for social media managers and small businesses</h2>
+                        <p>
+                            A multi-platform social media management application that enables users to manage their
+                            social media profiles accross multiple social platforms from a single unified app. Allowed
+                            users to post, view statistics, and curate their content curation strategy using trained
+                            Convolutional and Recurrent neural networks embedded within the app.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/project-1.png" alt="img" />
+                    </div>
+                </div>
+
                 <div class="project-item">
                     <div class="project-info">
                         <a href="https://github.com/thecoderenroute/BookSMart.git">
@@ -229,8 +481,8 @@
                         <h2>A General Purpose discord bot</h2>
                         <p>
                             A General Purpose discord bot written in Python with
-                            functionalities of Web scraping images, polls, and extensive use
-                            of discord functionalities.
+                            functionalities of scraping images off the web, polls, and various miscellanious
+                            of discord-specific functionalities.
                         </p>
                     </div>
                     <div class="project-image">
@@ -262,7 +514,7 @@
                     where nothing is more than a click away, it is a privilege to be an
                     engineer. I am also an avid reader and a casual photographer
                 </p>
-                <a href="./doc/Resume.pdf" class="cta" target="_blank">Download Resume</a>
+                <a href="./doc/Hardik_Kapadia_Resume.pdf" class="cta" target="_blank">Download Resume</a>
             </div>
         </div>
     </section>
@@ -290,7 +542,7 @@
                     </div>
                     <div class="contact-info">
                         <h1>Phone</h1>
-                        <h2>+91 887 956 3067</h2>
+                        <h2>+1-346-538-1387</h2>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -299,8 +551,8 @@
                     </div>
                     <div class="contact-info">
                         <h1>Address</h1>
-                        <h2>Kandivali (w), Mumbai</h2>
-                        <h2>India</h2>
+                        <h2>Chicago, IL</h2>
+                        <h2>US</h2>
                     </div>
                 </div>
             </div>
@@ -315,7 +567,7 @@
             <div class="brand">
                 <h1><span>H</span>ardik <span>K</span>apadia</h1>
             </div>
-            <h2>To bringin magic to life</h2>
+            <h2>To bringing magic to life</h2>
             <div class="social-icons">
                 <div class="social-item">
                     <a href="https://github.com/thecoderenroute"><img
