--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                     where nothing is more than a click away, it is a privilege to be an
                     engineer. I am also an avid reader and a casual photographer
                 </p>
-                <a href="./doc/Hardik_Kapadia_Resume.pdf" class="cta" target="_blank">Download Resume</a>
+                <a href="https://github.com/thecoderenroute/thecoderenroute.github.io/doc/Hardik_Kapadia_Resume.pdf" class="cta" target="_blank">Download Resume</a>
             </div>
         </div>
     </section>
