--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/uni-link-logo.png" alt="img" />
                     </div>
                 </div>
 
@@ -204,7 +204,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-3.jpg" alt="img" />
+                        <img src="./img/booksmart-logo.jpg" alt="img" />
                     </div>
                 </div>
 
@@ -261,7 +261,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/uni-link-logo.png" alt="img" />
                     </div>
                 </div>
 
@@ -298,7 +298,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/social-student-stats-logo.png" alt="img" />
                     </div>
                 </div>
 
@@ -317,7 +317,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/doc-logo.jpg" alt="img" />
                     </div>
                 </div>
 
@@ -339,7 +339,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/uni-link-logo.png" alt="img" />
                     </div>
                 </div>
 
@@ -358,7 +358,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-3.jpg" alt="img" />
+                        <img src="./img/booksmart-logo.jpg" alt="img" />
                     </div>
                 </div>
 
@@ -451,7 +451,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-1.png" alt="img" />
+                        <img src="./img/uni-link-logo.png" alt="img" />
                     </div>
                 </div>
 
@@ -470,7 +470,7 @@
                         </p>
                     </div>
                     <div class="project-image">
-                        <img src="./img/project-3.jpg" alt="img" />
+                        <img src="./img/booksmart-logo.jpg" alt="img" />
                     </div>
                 </div>
                 <div class="project-item">
