--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
                         <img src="./img/booksmart-logo.jpg" alt="img" />
                     </div>
                 </div>
+
                 <div class="project-item">
                     <div class="project-info">
                         <a href="https://github.com/thecoderenroute/dicord-bot.git">
@@ -487,6 +488,44 @@
                     </div>
                     <div class="project-image">
                         <img src="./img/project-4.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Social Students Stats</h1>
+                        </a>
+                        <h2>Computing Sociability scores and homophily for social media users</h2>
+                        <p>
+                            Formulated and implemented a statistical model under a professor to mine and analyze the
+                            social media profiles and posts of over 5000 users. The model computes personalized
+                            sociability scores and quantifies the homophily between users. The model also utilized a
+                            Recurrent Neural Network trained on 20,000 tweets which identified troll tweets with 95%
+                            accuracy.
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/social-student-stats-logo.png" alt="img" />
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/thecoderenroute/stonks">
+                            <h1>Insta-diagnosis</h1>
+                        </a>
+                        <h2>Predicting the probability of a user having a disease based off scans</h2>
+                        <p>
+                            Led a team in developing a secure web app using Django to predict whether or not a user has
+                            a
+                            certain disease based on MRI scans of respective uploaded by users. Pre-processed the images
+                            using OpenCV before passing them to the CNNs.
+
+                        </p>
+                    </div>
+                    <div class="project-image">
+                        <img src="./img/doc-logo.jpg" alt="img" />
                     </div>
                 </div>
             </div>
