--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                     where nothing is more than a click away, it is a privilege to be an
                     engineer. I am also an avid reader and a casual photographer
                 </p>
-                <a href="https://bit.ly/hardik-swe-resume" class="cta" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1oZXmNhq-vzZKX5fL4LweN3xlh7J6mGqs/view?usp=sharing" class="cta" target="_blank">Download Resume</a>
             </div>
         </div>
     </section>
