added icons in hero

--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
                     Hardik<span></span>
                 </h1>
                 <a href="#about" class="cta"> Resume </a>
+                <div class="hero-contact-icons">
+                    <div class="hero-contact-item">
+                        <a href="https://github.com/hardik-kapadia">
+                            <img width="96" height="96" src="./img/social/icons8-github-96.png" />
+                            <!-- <img width="96" height="96" src="https://img.icons8.com/nolan/96/github.png" /> -->
+                        </a>
+                    </div>
+                    <div class="hero-contact-item">
+                        <a href="https://www.linkedin.com/in/hardik-kapadia/">
+                            <img width="96" height="96" src="./img/social/icons8-linkedin-100.png" />
+                        </a>
+                    </div>
+                    <div class="hero-contact-item">
+                        <a href="mailto:hardik.kapadia63@gmail.com">
+                            <img width="100" height="100" src="./img/social/icons8-post-100.png" alt="message-squared"/>
+                            </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -549,7 +567,8 @@
                     where nothing is more than a click away, it is a privilege to be an
                     engineer. I am also an avid reader and a casual photographer
                 </p>
-                <a href="https://drive.google.com/file/d/1oZXmNhq-vzZKX5fL4LweN3xlh7J6mGqs/view?usp=sharing" class="cta" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1oZXmNhq-vzZKX5fL4LweN3xlh7J6mGqs/view?usp=sharing" class="cta"
+                    target="_blank">Download Resume</a>
             </div>
         </div>
     </section>
@@ -605,7 +624,7 @@
             <h2>To bringing magic to life</h2>
             <div class="social-icons">
                 <div class="social-item">
-                    <a href="https://github.com/thecoderenroute"><img
+                    <a href="https://github.com/hardik-kapadia"><img
                             src="https://img.icons8.com/nolan/64/github.png" /></a>
                 </div>
                 <div class="social-item">
@@ -613,21 +632,7 @@
                             src="https://img.icons8.com/nolan/64/linkedin.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="https://stackoverflow.com/users/7330002/thecoderenroute"><img
-                            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABmJLR0QA/wD/AP+gvaeTAAAEp0lEQVRo
-                            ge2Ya2xUZRCGnzm7y4KBAhUUu72oFMRuiU0KMSA/2tIoYgiJhkIsoOGaaBCMEGi5pEYuGrnZRiJWxUApdIWY+ENjIoRASIyhStBtKNSg9KIGjKgobrt7xh/by
-                            7EscNgLlLhvNtkz38w3M+/5ZuacXUgiiSSSuJ2Q250AQHblWfcQN9WYOgaREScWZ2chonb29gkCAOPeOfsrkAqg0pFWvzjnJzv7jIRm1Qtjy3wTcst9KyLpBM
-                            70SP3G2PV5SwhkL/nUnVteV6eix0E3eVfuf+QqI9XGnmvzIbu+bwmBpqqpAUTuIlyyDnHItquMRLoJCNK3CAAYwnKgo1MszC33PWXVi8ppi9i3Sgjg1PqSRqC6
-                            Z8XcnL9op6tLErGUEPS9EwBwqVQAv4clGRO4e+iCLt3l1PYmINgpZk3Y2jzAjs+4E/BOrhlPRUVEv99sKrmgysbuBdFX81f6BgP4S7ztCue68gr07xhlJ15cCe
-                            QU1nqBo95j2cdyi/aPjGjklu3A953S8H+c5iqLtqeRHSFbZRQ3AtlPVrrFCNUC/YGJKsGvvcV7F/W281eUtCu6pjtRlWV5q/bdH5bU0shqq5HjRiD9ytgQatTS
-                            M2lSUN3pnbz3wOiC2mFWW//GmXXA8U6xf0iMcFlZRilqb5TGjcCRI4VB/+HSN1CZBGJ5quozLof5nbeodlrPmqghuhzQcK7Myl29b6KGTMuzwN4kinsT+w+Xfp
-                            XytytPobIrQeBexPzEW1yz21vgGwhwasOsLwUOduerxuagOKyjNNVOvIS+zOUW1TyuwgeAx7J8TtHnGg7NOTZ21cEH1Qg2AG6FH5wik5yZeentIfeZb1/I+s1Oj
-                            JgJbPC8m4cYz6tIzZrm+Sd66/MKdg3pMFxvIzxrWQ4iuoWh7nUySstUuRK4POitpqqpgZuNHzOB9RnV21CWdYqnFeqcSE1Zy4Imq523eM9cVCqBwZblz/2HZk+J
-                            JX5MBCqocDrTPc3AiAiO6010jyPorC3/ed4FAG/x7kzU+BAoBFDRmQ1fzPHFkoMjls0FFCADB50UDBNhJOC2qNMEmaKGLp2cMi2/KGVa8OFLcvKj6ed2DT+f+qc
-                            g5xsOzX49lvgQxybemr51wBUZOF1VSoEnAFcEs0vAAQOtKWtZeFSw97PxekjIFNqUuWOoabpmmMJcUSZGiPPj6pYFD/RZAlasv++9LHGYsxSZB4wGUOW1ta0L18X
-                            Dvy0Cbz5W132nVhyf2b1n6fgqH+hFTNoUo9lhmK0acrS2B2je4X/xcm8/Gz3vT1AxS03TqFrbNr/xer7twnmzG7qw5NHKFELMAOn8KKYKGCauAbB0XNUfKC0itKhK
-                            G5jnf5G/2kT5bHv9S403jpBgAkD6DfQpCDkKOeFSD99cFS4A98QQ9z+ImoAjEGoz+7melpCZISIehTQgk/B3OuHX6khojTZmJERNYPvJly8BH19L/0r+zmFBDaWJB
-                            DNMw/CIaXoQyRChJdqYkRBLCV0XW+oXXwQuAqcSFQNiJGCdIDeDaKbNtXBL/5VIBO54AjGVUDxLIVr8/04g2sZNFO74E7jjCSSRRBJJ3F78C+C9gL3NAffXAAAAAElFTkSuQmCC" /></a>
+                    <a href="https://stackoverflow.com/users/7330002/thecoderenroute"></a>
                 </div>
             </div>
             <p>Copyright © 2021 Hardik Kapadia. All Rights Reserved</p>
