--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="Hardik,Kapadia,thecoderenroute,portfolio,resume" />
+    <meta name="keywords" content="Hardik,Kapadia,thecoderenroute,portfolio,resume, software developer, software, developer" />
     <meta name="description" content="Hardik Kapadia's Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -173,7 +173,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/stonks">
+                        <a href="https://github.com/hardik-kapadia/stonks">
                             <h1>Stock Market Portfolio Management App Backend</h1>
                         </a>
                         <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
@@ -191,7 +191,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                        <a href="https://github.com/hardik-kapadia/unilink-backend">
                             <h1>Uni-link</h1>
                         </a>
                         <h2>Unified solution for social media managers and small businesses</h2>
@@ -209,7 +209,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/BookSMart.git">
+                        <a href="https://github.com/hardik-kapadia/BookSMart.git">
                             <h1>Book 'S' Mart</h1>
                         </a>
                         <h2>An Android App to exchange books</h2>
@@ -228,7 +228,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/stonks">
+                        <a href="https://github.com/hardik-kapadia/stonks">
                             <h1>Stonks</h1>
                         </a>
                         <h2>Stock Market Prediction using Social Media Sentiment</h2>
@@ -246,7 +246,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/dicord-bot.git">
+                        <a href="https://github.com/hardik-kapadia/dicord-bot.git">
                             <h1>Discord bot</h1>
                         </a>
                         <h2>A General Purpose discord bot</h2>
@@ -267,7 +267,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                        <a href="https://github.com/hardik-kapadia/unilink-backend">
                             <h1>Uni-link</h1>
                         </a>
                         <h2>Unified solution for social media managers and small businesses</h2>
@@ -285,7 +285,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/stonks">
+                        <a href="https://github.com/hardik-kapadia/stonks">
                             <h1>Stonks</h1>
                         </a>
                         <h2>Stock Market Prediction using Social Media Sentiment</h2>
@@ -320,7 +320,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/Insta-diagnosis">
+                        <a href="https://github.com/hardik-kapadia/Insta-diagnosis">
                             <h1>Insta-diagnosis</h1>
                         </a>
                         <h2>Predicting the probability of a user having a disease based off scans</h2>
@@ -343,7 +343,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                        <a href="https://github.com/hardik-kapadia/unilink-backend">
                             <h1>Uni-link</h1>
                         </a>
                         <h2>Unified solution for social media managers and small businesses</h2>
@@ -361,7 +361,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/BookSMart.git">
+                        <a href="https://github.com/hardik-kapadia/BookSMart.git">
                             <h1>Book 'S' Mart</h1>
                         </a>
                         <h2>An Android App to exchange books</h2>
@@ -380,7 +380,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/ReImagine-App">
+                        <a href="https://github.com/hardik-kapadia/ReImagine-App">
                             <h1>ReImagine</h1>
                         </a>
                         <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
@@ -401,7 +401,7 @@
             <div class="all-pros all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/stonks">
+                        <a href="https://github.com/hardik-kapadia/stonks">
                             <h1>Stonks</h1>
                         </a>
                         <h2>Stock Market Prediction using Social Media Sentiment</h2>
@@ -420,7 +420,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/ReImagine-App">
+                        <a href="https://github.com/hardik-kapadia/ReImagine-App">
                             <h1>ReImagine</h1>
                         </a>
                         <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
@@ -437,7 +437,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/stock-portfolio-management">
+                        <a href="https://github.com/hardik-kapadia/stock-portfolio-management">
                             <h1>Stock Market Portfolio Management App Backend</h1>
                         </a>
                         <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
@@ -455,7 +455,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/unilink-backend">
+                        <a href="https://github.com/hardik-kapadia/unilink-backend">
                             <h1>Uni-link</h1>
                         </a>
                         <h2>Unified solution for social media managers and small businesses</h2>
@@ -473,7 +473,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/BookSMart.git">
+                        <a href="https://github.com/hardik-kapadia/BookSMart.git">
                             <h1>Book 'S' Mart</h1>
                         </a>
                         <h2>An Android App to exchange books</h2>
@@ -492,7 +492,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/dicord-bot.git">
+                        <a href="https://github.com/hardik-kapadia/dicord-bot.git">
                             <h1>Discord bot</h1>
                         </a>
                         <h2>A General Purpose discord bot</h2>
@@ -526,7 +526,7 @@
 
                 <div class="project-item">
                     <div class="project-info">
-                        <a href="https://github.com/thecoderenroute/Insta-diagnosis">
+                        <a href="https://github.com/hardik-kapadia/Insta-diagnosis">
                             <h1>Insta-diagnosis</h1>
                         </a>
                         <h2>Predicting the probability of a user having a disease based off scans</h2>
