added video background

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="Hardik,Kapadia,thecoderenroute,portfolio,resume, software developer, software, developer" />
+    <meta name="keywords"
+        content="Hardik,Kapadia,thecoderenroute,portfolio,resume, software developer, software, developer" />
     <meta name="description" content="Hardik Kapadia's Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -44,6 +45,9 @@
     <!-- Hero Section -->
 
     <section id="hero">
+        <video id="background-video" autoplay loop muted poster="./img/video/bg-poster.jpg">
+            <source src="./img/video/bg.mp4" type="video/mp4">
+        </video>
         <div class="hero container">
             <div>
                 <h1>Hello,<span></span></h1>
@@ -66,8 +70,9 @@
                     </div>
                     <div class="hero-contact-item">
                         <a href="mailto:hardik.kapadia63@gmail.com">
-                            <img width="100" height="100" src="./img/social/icons8-post-100.png" alt="message-squared"/>
-                            </a>
+                            <img width="100" height="100" src="./img/social/icons8-post-100.png"
+                                alt="message-squared" />
+                        </a>
                     </div>
                 </div>
             </div>
