--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
         </div>
+        <hr id="header-seperator">
     </section>
 
     <!-- End of Header -->
