--- a/index.html
+++ b/index.html
@@ -593,7 +593,9 @@
                     </div>
                     <div class="contact-info">
                         <h1>Email</h1>
-                        <h2>hardik.kapadia63@gmail.com</h2>
+                        <a href="mailto:hardik.kapadia63@gmail.com">
+                            <h2>hardik.kapadia63@gmail.com</h2>
+                        </a>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -638,7 +640,9 @@
                             src="https://img.icons8.com/nolan/64/linkedin.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="https://stackoverflow.com/users/7330002/thecoderenroute"></a>
+                    <a href="mailto:hardik.kapadia63@gmail.com">
+                        <img width="64" height="64" src="https://img.icons8.com/nolan/64/gmail.png" alt="gmail" />
+                    </a>
                 </div>
             </div>
             <p>Copyright © 2021 Hardik Kapadia. All Rights Reserved</p>
