--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <div>
             <h1>Hello,<span></span></h1>
             <h1>My Name is <span></span></h1>
-            <h1 id="replace" og="Hardik" next="thecoderenroute">
-                Hardik<span></span>
+            <h1>Hardik<span></span>
             </h1>
             <a href="#about" class="cta"> Resume </a>
             <div class="hero-contact-icons">
